[project]
name = "llm-cost-tracker"
version = "0.1.0"
description = "Token, cost, and latency observability for LLM API calls. Wraps OpenAI and Anthropic clients."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Darrshan Govender", email = "darrshangovender@gmail.com" }]
keywords = ["llm", "observability", "openai", "anthropic", "cost"]
dependencies = [
    "rich>=13.7",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
llm-cost = "llm_cost_tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"